[package]
name = "twenty-postgres-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
pgwire = "0.12.0"
tokio = { version = "1.28.0", features = ["full"] }
tokio-postgres = "0.7.8"
futures = "0.3.28"
env_logger = "0.10.0"
log = "0.4.17"
anyhow = "1.0.71"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"